--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jobsearch_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# PostgreSQL DB settings from Railway
+spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:22791/railway
+spring.datasource.username=postgres
+spring.datasource.password=nXjFWngrAjDqUCYrnCSqGmtMzBftMAkm
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# JPA & Hibernate settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
-# Hikari Connection Pool (Fixes Undefined Driver Issue)
+# HikariCP (optional tuning for PostgreSQL)
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
