--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
     <artifactId>spring-boot-starter-actuator</artifactId>
 </dependency>
 
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.7.2</version>
+</dependency>
+
+
     
 </dependencies>
 
